# qr-reader

./: .gitignore  LICENSE  README.md  pyproject.toml
app/: main.py
app/static/: scripts.js  styles.css
app/templates/: scanner.html  view.html
ssl-certs/: .gitignore  ssl-config.cnf
