[project]
name = "qr-reader"
version = "0.1.0"
description = "Happy birthsday my dear wife!"
authors = [
    {name = "Nizamov Maxim",email = "pusher.max@yandex.ru"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi (>=0.128.0,<0.129.0)",
    "uvicorn[standard] (>=0.40.0,<0.41.0)",
    "jinja2 (>=3.1.6,<4.0.0)",
    "python-multipart (>=0.0.21,<0.0.22)"
]

[tool.poetry]
package-mode = false

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
